tests/ui/async-await/async-closures/not-clone-closure.stderr
error[E0277]: the trait bound `NotClonableUpvar: Clone` is not satisfied in `{async closure@we_only_care_about_clonable_upvars::{closure not_clone}}`
  --> $DIR/not-clone-closure.rs:30:15
   |
LL |     not_clone.clone();
   |               ^^^^^ unsatisfied trait bound
   |
   = help: within `{async closure@we_only_care_about_clonable_upvars::{closure not_clone}}`, the trait `Clone` is not implemented for `NotClonableUpvar`
note: required because it's used within this closure
  --> $DIR/not-clone-closure.rs:27:21
   |
LL |     let not_clone = async move || {
   |                     ^^^^^^^^^^^^^
help: consider annotating `NotClonableUpvar` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct NotClonableUpvar;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
